--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -199,6 +199,7 @@
   <div class="row">
     <div class="twelve columns collapsed">
       <h1>Project Portfolio</h1>
+      <h3>Hover/Click on cards for more details</h3>
       <!-- portfolio-wrapper -->
       <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
         <div class="columns portfolio-item">
