made bottom address dynamic

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -499,8 +499,8 @@
     <h4>Address and Phone</h4>
     <p class="address">
       Jacques Troussard
-      <br> 904 Brompton Street
-      <br> Fredericksburg, VA 22401
+      <br> {{ base_data.street }}
+      <br> {{ base_data.city }}, {{ base_data.state }} {{ base_data.zipcode }}
       <br>
       <span>(925) 478-0337</span>
     </p>
