try-catch api 500 error

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -311,7 +311,7 @@
         <span class="categories"><i class="fa fa-tag"></i>Video Games, Graphics</span>
       </div>
       <div class="link-box">
-        <a href="https://github.com/jtroussard/chocobo-egg-run-game" target="_blank">GitHub Repo</a>
+        <a href="https://github.com/jtroussard/chocobo-egg-run-game" target="_blank"></li><i class="fa fa-github fa-2x"></i>GitHub Repo</a>
         <a class="popup-modal-dismiss">Close</a>
       </div>
     </div>
