--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -108,7 +108,7 @@
                 <li>Hackathon Prize Winner Fall 2017</li>
                 <li>List of <em>Significant</em> courses taken:
                   <ul>
-                    <li><strong>CPSC 240</strong>: Object-oriented Anaylsis and Design (Java)</li>
+                    <li><strong>CPSC 240</strong>: Object-oriented Analysis and Design (Java)</li>
                     <li><strong>CPSC 340</strong>: Data Structures and Algorithms (C++)</li>
                     <li><strong>CPSC 350</strong>: Applications of Databases (Python/PostgreSQL)</li>
                     <li><strong>CPSC 430</strong>: Software Engineering (Agile Development)</li>
