--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,29 +1,5 @@
-<!DOCTYPE html>
-<html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Jacques Troussard</title>
-    <meta name="description" content="Jacques Troussard E-Portfolio">
-    <meta name="author" content="Jacques Troussard">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111130996-1"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'UA-111130996-1');
-    </script>
-    <!-- end Google Analytics -->
-    
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/css/default.css">
-    <link rel="stylesheet" href="static/css/layout.css">
-    <link rel="stylesheet" href="static/css/media-queries.css">
-    <link rel="stylesheet" href="static/css/magnific-popup.css">
-    <script src="static/js/modernizr.js"></script>
-    <link rel="shortcut icon" href="static/images/favicon/current/favicon-16x16.png">
-  </head>
+{% extends "layout.html" %}
+{% block content %}
   <body>
     <header id="home">
       <nav id="nav-wrap">
@@ -537,19 +513,4 @@
 <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#home"><i class="icon-up-open"></i></a></div>
 </div>
 </footer>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script>
-window.jQuery || document.write('<script src="static/js/jquery-1.10.2.min.js"><\/script>')
-</script>
-<script type="text/javascript" src="static/js/jquery-migrate-1.2.1.min.js"></script>
-<script src="static/js/jquery.flexslider.js"></script>
-<script src="static/js/waypoints.js"></script>
-<script src="static/js/jquery.fittext.js"></script>
-<script src="static/js/magnific-popup.js"></script>
-<script src="static/js/init.js"></script>
-<script src="https://use.fontawesome.com/444b76bd41.js"></script>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-</body>
-</html>
+{% endblock %}
