added github/global icons to all projects

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -270,7 +270,7 @@
         <span class="categories"><i class="fa fa-tag"></i>Business, Web Application</span>
       </div>
       <div class="link-box">
-        <a href="https://github.com/jtroussard/warehouse" target="_blank">GitHub Repo</a>
+        <a href="https://github.com/jtroussard/warehouse" target="_blank"><i class="fa fa-github fa-2x"></i>GitHub Repo</a>
         <a class="popup-modal-dismiss">Close</a>
       </div>
     </div>
@@ -304,7 +304,7 @@
         <span class="categories"><i class="fa fa-tag"></i>Web Crawling, Scripting</span>
       </div>
       <div class="link-box">
-        <a href="https://github.com/jtroussard/HD-Hound" target="_blank">GitHub Repo</a>
+        <a href="https://github.com/jtroussard/HD-Hound" target="_blank"><i class="fa fa-github fa-2x"></i>GitHub Repo</a>
         <a class="popup-modal-dismiss">Close</a>
       </div>
     </div>
@@ -321,7 +321,7 @@
         <span class="categories"><i class="fa fa-tag"></i>LRS, API, Web Development</span>
       </div>
       <div class="link-box">
-        <a href="http://35.193.240.36/" target="_blank">Live Website</a>
+        <a href="http://35.193.240.36/" target="_blank"><i class="fa fa-globe fa-2x"></i>Live Website</a>
         <a class="popup-modal-dismiss">Close</a>
       </div>
     </div>
@@ -338,7 +338,7 @@
       <span class="categories"><i class="fa fa-tag"></i>AI, Hackathon</span>
     </div>
     <div class="link-box">
-      <a href="https://github.com/jtroussard/hackathon-2017-scbot">GitHub Repo</a>
+      <a href="https://github.com/jtroussard/hackathon-2017-scbot"><i class="fa fa-github fa-2x"></i>GitHub Repo</a>
       <a class="popup-modal-dismiss">Close</a>
     </div>
   </div>
