--- a/app/static/css/layout.css
+++ b/app/static/css/layout.css
@@ -236,7 +236,7 @@ ul#nav li.current a { color: #F06000; }
 /* ------------------------------------------------------------------ */
 
 #resume {
-   background: #fff;
+   background: #ced8ea;
    padding-top: 90px;
    padding-bottom: 72px;
    overflow: hidden;
@@ -264,7 +264,6 @@ ul#nav li.current a { color: #F06000; }
 .education, .work {
    margin-bottom: 48px;
    padding-bottom: 24px;
-   border-bottom: 1px solid #E8E8E8;
 }
 #resume .info {
    font: 16px/24px 'librebaskerville-italic', serif;
