added school logos, some formating, added to css

--- a/app/static/css/default.css
+++ b/app/static/css/default.css
@@ -814,6 +814,19 @@ properly.
    max-width: 100%;
 }
 
+/*  4. Trail ---------------------------------------------------------- */
+
+.school-logo {
+    text-decoration: none;
+    max-width: 90px;
+    margin-right: 2em;
+}
+
+.school {
+    padding-top: 10px; 
+    padding-left: 95px;
+}
+
 
 
 
