--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,7 @@
       <div class="row banner">
         <div class="banner-text">
           <h1 class="responsive-headline">Nice to meet you.</h1>
-          <h3>My name is <span>Jacques Troussard</span>. I am a <span>software/AI developer</span> and <span>webapp programmer</span> developing creative and exciting solutions for a variety of problems. Please continue to learn more.
+          <h3>My name is <span>Jacques Troussard</span>. I am a recent <span>Computer Science</span> graduate of University of Mary Washington looking to break into the industry as a <span>software/application/web developer</span>. I'm <span>highly motivated</span>, always <span>learning</span>, and have <span>international</span> work experience. Please continue to learn more.
           </h3>
           <hr />
           <ul class="social">
@@ -73,6 +73,7 @@
         <div class="nine columns main-col">
           <div class="row item">
             <div class="twelve columns">
+               <a href="https://www.umw.edu" class="school-logo" target="_blank"><img src="/static/images/logo_umw_white.png" class="school-logo float-left img-responsive border border-dark"></a>
               <h3>University of Mary Washington</h3>
               <p class="info">Bachelor of Science, Computer Science <span>&bull;</span> GPA 3.33 <span>&bull;</span> <em class="info">December 2017</em>
             </p>
@@ -95,6 +96,8 @@
         </div>
         <div class="row item">
           <div class="twelve columns">
+            <a href="https://www.nvcc.edu" class="school-logo" target="_blank">
+              <img src="/static/images/logo_nova_white.png" class="school-logo float-left img-responsive border border-dark"></a>
             <h3>Northern Virginia Community College</h3>
             <p class="info">Associates of Science, Social Sciences <span>&bull;</span> GPA 3.38 <span>&bull;</span> <em class="info">August 2016</em>
           </p>
