wording, added school-banner style class (not finished)

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,7 @@
       <div class="row banner">
         <div class="banner-text">
           <h1 class="responsive-headline">Nice to meet you.</h1>
-          <h3>My name is <span>Jacques Troussard</span>. I am a recent <span>Computer Science</span> graduate of University of Mary Washington looking to break into the industry as a <span>software/application/web developer</span>. I'm <span>highly motivated</span>, always <span>learning</span>, and have <span>international</span> work experience. Please continue to learn more.
+          <h3>My name is <span>Jacques Troussard</span>. I am a recent <span>Computer Science</span> graduate of University of Mary Washington looking to break into the industry as a <span>software/ai/web developer</span>. I'm <span>highly motivated</span>, always <span>learning</span>, and have <span>international</span> work experience. Please continue to learn more.
           </h3>
           <hr />
           <ul class="social">
@@ -73,10 +73,11 @@
         <div class="nine columns main-col">
           <div class="row item">
             <div class="twelve columns">
+              <div class="school-banner">
                <a href="https://www.umw.edu" class="school-logo" target="_blank"><img src="/static/images/logo_umw_white.png" class="school-logo float-left img-responsive border border-dark"></a>
               <h3>University of Mary Washington</h3>
               <p class="info">Bachelor of Science, Computer Science <span>&bull;</span> GPA 3.33 <span>&bull;</span> <em class="info">December 2017</em>
-            </p>
+            </p></div>
             <p>
               <ul class="disc">
                 <li>Dean's List Fall 2016</li>
