--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -181,7 +181,7 @@
       <div class="three columns header-col">
         <h1><span>Skills</span></h1>
       </div>
-      <div class="nine columns main-col">
+      <div class="nine columns main-col" class=third>
         <p>This is a list of the technologies with which I am most familiar. This is not a comprehensive collection, as I am always experimenting and growing my skillset.
         </p>
         <div class="bars">
@@ -417,6 +417,30 @@
     </div>
   </div>
 </section>
+<section id="portfolio">
+    <div class="row">
+      <div class="twelve columns collapsed">
+        <h1>Forums and Collaboration</h1>
+        <h3>Forums and other areas which I've demonstrative helpful and organized disposition.</h3>
+	<p><b>Stack Overflow -</b> Everyone's faveorite place to prove themselves right. Honestly, this site helped me learn how to craft questions (content and presentation) in a useful and standardized way.
+          <ul class="disc">
+            <li><a href="https://stackoverflow.com/users/5094207/tekksparrow" target="_blank">Stack Overflow Profile and Activity</a></li>
+          </ul>
+        </p>
+	<p><b>GitHub Issue for Python Requests</b> -  HTTP for Humans library: I've listed this issue because I've always seen the Requests library as a model for other libraries. Initially I was going to open an issue that stated the problem and leave it for the community to solve. After thinking about it for a short while I realized, I AM part of this COMMUNITY and I decided it was time I start trying to contribute to projects much bigger than my own. Within a few hours I had parsed and reverse-engineered enough of their code that I could understand at least what was causing the issue and how it was landing in my data. Unfortunately I hit a stopping point were I could no longer follow the libraries process to suggest a 'true fix' but only a local hack. All the details are in this link.
+          <ul class="disc">
+            <li><a href="https://github.com/requests/requests-oauthlib/issues/377" target="_blank">Requests OAuth Library Issue #377</a></li>
+          </ul>
+        </p>
+	<p><b>MongoDB University Forums</b> - This link is posted basically because after my first issue I found myself offering more help and contributing to topic in a more meaningful way. This is not to say I had mastered the material but that I was maturing as a developer and realizing great value out of helping others.
+          <ul class="disc">
+            <li><a href="https://discourse.university.mongodb.com/u/tekksparrow/activity" target="_blank">MongoDB University Forums Profile Activity</a></li>
+          </ul>
+        </p>
+	
+      </div>
+    </div>
+</section>
 <section id="call-to-action">
   <div class="row">
     <a name="3dart"></a>
@@ -591,7 +615,9 @@
       <li><a href="https://www.linkedin.com/in/jacques-troussard-5225066a/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
       <li><a href="https://www.youtube.com/channel/UCFVKs9Lk2D49pu_NfpYSl6w?view_as=subscriber" target="_blank"><i class="fa fa-youtube"></i></a></li>
       <li><a href="https://github.com/jtroussard" target="_blank"><i class="fa fa-github"></i></a></li>
-    </ul>
+    </ul><font color="lime">
+	    <strong>This Website is a Flask Web Application: Code available <a href="https://github.com/jtroussard/e-portfolio" style="color: #FFFF00">here.</a></strong>
+    </font>
     <ul class="cpt">
     </ul>
   </div>
