--- a/app/static/css/default.css
+++ b/app/static/css/default.css
@@ -827,7 +827,12 @@ properly.
     padding-left: 95px;
 }
 
-
+.third {
+	    width: 60%;
+	        -moz-animation: 2s ease;
+		    -webkit-animation: 2s ease;
+	    }
+	    transition: 2s width;
 
 
 
